# og-control

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: mock-data.js  scripts.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  auth.rs  db.rs  main.rs
styles/: style.css
